# bazel_reproducers

./: .gitignore  README.md
action_config_with_no_tools/: .bazelrc  README.md
action_config_with_no_tools/cc_toolchain/: generated_toolchain.bzl
action_conflicts_with_platform_name_in_out_dir/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  outer.py
base/: .bazelrc  README.md
clobbering_builtin_features/: BUILD.bazel  README.md  WORKSPACE  hello_world.c  xy_foo.cc
clobbering_builtin_features/cc_toolchain/: BUILD.bazel  generated_toolchain.bzl
config_setting_bool_case_sensitivity/: BUILD.bazel  MODULE.bazel  README.md  test.cc
exec_propagate_to_toolchain/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  custom_toolchain.bzl
external_runfiles_broken_rules_python/: README.md
external_runfiles_broken_rules_python/actual_repo/: BUILD.bazel  MODULE.bazel
external_runfiles_broken_rules_python/foo_external/: BUILD.bazel
feature_with_bad_name/: .bazelrc  README.md  hello_world.c
feature_with_bad_name/cc_toolchain/: generated_toolchain.bzl
finding_repo_root/: BUILD.bazel  MODULE.bazel  README.md  message.txt
finding_repo_root/inner_module/: BUILD.bazel  MODULE.bazel  WORKSPACE  message.txt
flag_group_with_empty_strings/: BUILD.bazel  README.md  hello_world.c
flag_group_with_empty_strings/cc_toolchain/: generated_toolchain.bzl
flag_group_with_empty_strings/xy_include/: xy_foo.h
minimal_cc_toolchain/: README.md
minimal_cc_toolchain/cc_toolchain/: generated_toolchain.bzl
new_feature/: README.md
new_feature/cc_toolchain/: generated_toolchain.bzl
nonexistant_features/: .bazelrc  README.md
nonexistant_features/cc_toolchain/: generated_toolchain.bzl
propagate_custom_flag_issues/: .bazelrc  README.md  exec_shim.bzl
propoagate_custom_flag_issues/: BUILD.bazel  MODULE.bazel  flag_repo.bzl
rules_pkg_symlink/: BUILD.bazel  MODULE.bazel  README.md  check_archive_path.py
shared_object_symlink/: README.md
simple_binary/: BUILD.bazel  MODULE.bazel  README.md  my_script.py
unresolved_extension_repo/: BUILD.bazel  MODULE.bazel  README  README.md  extension.bzl  platforms_repo_contents.BUILD  repo_contents.BUILD
