load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello_world",
    srcs = ["hello_world.c"],
    deps = [":xy_foo"],
    copts = ["-std=c99"],
)

cc_library(
    name = "xy_foo",
    includes = ["xy_include"],
    hdrs = ["xy_include/xy_foo.h"],
    srcs = ["xy_foo.cc"],
    copts = ["-std=c++17"],
    alwayslink = True,
)